styling to prevent cursor from shifting the text

--- a/stylesheets/decoder.css
+++ b/stylesheets/decoder.css
@@ -1,8 +1,10 @@
 .character{
 	text-align:center;
 	float:left;
-	margin: 0 1em 2em 0;
+	margin: 0 .5em 2em 0;
+	padding:0 0 0 .5em;
 	height:4.5em;
+	border-left:1px solid #fff;
 }
 
 .character div{
